Attempt to fix sizing issues on small screens #3

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,11 +20,15 @@ html, body {
 .left-menu {
     visibility: hidden;
     position: relative;
+    left: 50%;
+    right: 50%;
+    margin-left: -50vw;
+    /*margin-right: -50vw;*/
     display: table-cell;
     table-layout: fixed;
-    width: 100%;
+    width: 99%;
     /*margin-left: 50px;*/
-    margin-left: 0px;
+    /*margin-left: 0px;*/
     background-color: #252526;
     color: #cccccc;
     height: 0px;
@@ -34,6 +38,7 @@ html, body {
     /* firefox scrollbar */
     scrollbar-color: #555 #1E1E1E;
     scrollbar-width: thin;
+    padding-left: 5px;
 }
 
 @media screen and (min-width: 800px) { 
